# enceladus

./: .gitignore  BigInt.spl  CMakeLists.txt  DESIGN  FUTURE  List.spl  Makefile  NOTES  README.md  Sort.spl  String.spl  TODO  address.cpp  address.hpp  ast.cpp  ast.hpp  ast_visitor.cpp  ast_visitor.hpp  build.sh  codegen.cpp  codegen.hpp  codegen2.cpp  codegen2.hpp  comment_in_line.spl  convert.spl  errors.spl  example.sh  factorial.spl  grammar.y  lexer.cpp  lexer_transform.cpp  library.asm  library.c  library.h  memory_manager.cpp  memory_manager.hpp  parser  parser.cpp  parser.hpp  platform.hpp  (+42 more)
src/: CMakeLists.txt  address.cpp  asm_printer.cpp  ast.cpp  ast_context.cpp  ast_visitor.cpp  basic_block.cpp  constant_folding.cpp  context.cpp  demote_globals.cpp  from_ssa.cpp  function.cpp  kill_dead_values.cpp  lexer_transform.cpp  machine_codegen.cpp  machine_context.cpp  machine_instruction.cpp  mangler.cpp  parser.cpp  redundant_moves.cpp  reg_alloc.cpp  semantic.cpp  simple.flex  simplec.cpp  stack_alloc.cpp  stack_map.cpp  string_table.cpp  symbol.cpp  symbol_table.cpp  tac_codegen.cpp  tac_instruction.cpp  tac_local_optimizer.cpp  tac_validator.cpp  tag_elision.cpp  to_ssa.cpp  tokens.cpp  types.cpp  utility.hpp  value.cpp  x86_codegen.cpp
src/ast/: CMakeLists.txt  ast.cpp  ast.hpp  ast_context.hpp  ast_visitor.cpp  ast_visitor.hpp
src/codegen/: CMakeLists.txt  asm_printer.cpp  asm_printer.hpp  machine_codegen.cpp  machine_codegen.hpp  machine_context.cpp  machine_context.hpp  machine_instruction.cpp  machine_instruction.hpp  redundant_moves.cpp  redundant_moves.hpp  reg_alloc.cpp  reg_alloc.hpp  stack_alloc.cpp  stack_alloc.hpp  stack_map.cpp  stack_map.hpp
src/ir/: CMakeLists.txt  basic_block.cpp  basic_block.hpp  constant_folding.cpp  constant_folding.hpp  context.cpp  context.hpp  demote_globals.cpp  demote_globals.hpp  from_ssa.cpp  from_ssa.hpp  function.cpp  function.hpp  kill_dead_values.cpp  kill_dead_values.hpp  tac_codegen.cpp  tac_codegen.hpp  tac_instruction.cpp  tac_instruction.hpp  tac_validator.cpp  tac_validator.hpp  tac_visitor.hpp  tag_elision.cpp  tag_elision.hpp  to_ssa.cpp  to_ssa.hpp  value.cpp  value.hpp  value_type.hpp
src/lexer/: CMakeLists.txt  lexer.flex  lexer_transform.cpp  simple.flex  string_table.cpp
src/parser/: CMakeLists.txt  parser.cpp  parser.hpp  tokens.cpp  tokens.hpp
src/semantic/: CMakeLists.txt  return_checker.cpp  return_checker.hpp  scope.hpp  semantic.cpp  (+13 more)
(+429 files in other folders)
